<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_navigation"
    app:startDestination="@id/homeFragment">

    <fragment
        android:id="@+id/homeFragment"
        android:name="com.example.sky_event.ui.fragments.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home">
        <action
            android:id="@+id/action_homeFragment_to_addEventFragment"
            app:destination="@id/addEventFragment" />
        <action
            android:id="@+id/action_homeFragment_to_eventsFragment"
            app:destination="@id/eventsFragment" />
        <action
            android:id="@+id/action_homeFragment_to_eventDetailsFragment"
            app:destination="@id/eventDetailsFragment" />
    </fragment>

    <fragment
        android:id="@+id/eventsFragment"
        android:name="com.example.sky_event.ui.fragments.EventsFragment"
        android:label="@string/title_events"
        tools:layout="@layout/fragment_events">
        <action
            android:id="@+id/action_eventsFragment_to_addEventFragment"
            app:destination="@id/addEventFragment" />
        <action
            android:id="@+id/action_eventsFragment_to_eventDetailFragment"
            app:destination="@id/eventDetailsFragment" />
    </fragment>

    <fragment
        android:id="@+id/weatherFragment"
        android:name="com.example.sky_event.ui.fragments.WeatherFragment"
        android:label="@string/title_weather"
        tools:layout="@layout/fragment_weather" />

    <fragment
        android:id="@+id/mapFragment"
        android:name="com.example.sky_event.ui.fragments.MapFragment"
        android:label="@string/title_map"
        tools:layout="@layout/fragment_map">
        <action
            android:id="@+id/action_mapFragment_to_eventDetailsFragment"
            app:destination="@id/eventDetailsFragment" />
    </fragment>

    <fragment
        android:id="@+id/profileFragment"
        android:name="com.example.sky_event.ui.fragments.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile" />

    <fragment
        android:id="@+id/addEventFragment"
        android:name="com.example.sky_event.ui.fragments.AddEventFragment"
        android:label="Новое событие"
        tools:layout="@layout/fragment_add_event" />

    <fragment
        android:id="@+id/eventDetailsFragment"
        android:name="com.example.sky_event.ui.fragments.EventDetailsFragment"
        android:label="Детали события"
        tools:layout="@layout/fragment_event_details">
        <argument
            android:name="eventId"
            app:argType="string" />
    </fragment>

    <fragment
        android:id="@+id/authFragment"
        android:name="com.example.sky_event.ui.fragments.AuthFragment"
        android:label="Авторизация"
        tools:layout="@layout/fragment_auth">
        <action
            android:id="@+id/action_authFragment_to_homeFragment"
            app:destination="@id/homeFragment"
            app:popUpTo="@id/main_navigation"
            app:popUpToInclusive="true" />
    </fragment>

</navigation>