<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:background="?android:attr/colorBackground"
    tools:context=".fragments.CreateEventFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/screen_padding">

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/textViewCreateTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="Новое мероприятие"
            android:textAppearance="?attr/textAppearanceHeadline1"
            android:layout_marginBottom="@dimen/spacing_large"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayoutName"
            style="@style/Widget.SkyEvent.TextInputLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_medium"
            android:hint="@string/event_name"
            app:startIconDrawable="@drawable/ic_edit"
            app:startIconTint="?attr/colorOnSurface"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textViewCreateTitle">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTextName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayoutDescription"
            style="@style/Widget.SkyEvent.TextInputLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_large"
            android:hint="@string/event_description"
            app:startIconDrawable="@drawable/ic_edit"
            app:startIconTint="?attr/colorOnSurface"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textInputLayoutName">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTextDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="top"
                android:inputType="textMultiLine"
                android:minLines="3" />
        </com.google.android.material.textfield.TextInputLayout>


        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.65" />

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/cardViewDate"
            style="@style/Widget.SkyEvent.CardView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_large"
            android:layout_marginEnd="@dimen/spacing_medium"
            app:cardElevation="@dimen/card_elevation"
            app:cardBackgroundColor="?attr/colorSurface"
            app:layout_constraintEnd_toStartOf="@id/guideline"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textInputLayoutDescription">

            <TextView
                android:id="@+id/textViewDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawablePadding="@dimen/spacing_medium"
                android:gravity="center_vertical"
                android:hint="@string/event_date"
                android:padding="@dimen/card_padding"
                android:textAppearance="?attr/textAppearanceBody1"
                app:drawableStartCompat="@drawable/ic_calendar"
                app:drawableTint="?attr/colorPrimary" />
        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonAutoDate"
            style="@style/Widget.SkyEvent.Button.Outlined"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/auto_select_date"
            android:maxLines="1"
            android:ellipsize="end"
            app:layout_constraintBottom_toBottomOf="@id/cardViewDate"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/guideline"
            app:layout_constraintTop_toTopOf="@id/cardViewDate" />

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/cardViewLocation"
            style="@style/Widget.SkyEvent.CardView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_large"
            android:layout_marginEnd="@dimen/spacing_medium"
            app:cardElevation="@dimen/card_elevation"
            app:cardBackgroundColor="?attr/colorSurface"
            app:layout_constraintEnd_toStartOf="@id/guideline"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cardViewDate">

            <TextView
                android:id="@+id/textViewLocation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawablePadding="@dimen/spacing_medium"
                android:gravity="center_vertical"
                android:hint="@string/event_location"
                android:padding="@dimen/card_padding"
                android:textAppearance="?attr/textAppearanceBody1"
                app:drawableStartCompat="@drawable/ic_location"
                app:drawableTint="?attr/colorPrimary" />
        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonSelectLocation"
            style="@style/Widget.SkyEvent.Button.Outlined"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/select_location"
            android:maxLines="1"
            android:ellipsize="end"
            app:layout_constraintBottom_toBottomOf="@id/cardViewLocation"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/guideline"
            app:layout_constraintTop_toTopOf="@id/cardViewLocation" />

        <TextView
            android:id="@+id/textViewWeatherConditions"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_xlarge"
            android:text="@string/event_weather_conditions"
            android:textAppearance="?attr/textAppearanceHeadline3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cardViewLocation" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayoutMinTemp"
            style="@style/Widget.SkyEvent.TextInputLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_large"
            android:layout_marginEnd="@dimen/spacing_medium"
            android:hint="@string/event_min_temp"
            app:helperText="°C"
            app:layout_constraintEnd_toStartOf="@id/textInputLayoutMaxTemp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textViewWeatherConditions"
            app:layout_constraintHorizontal_weight="1">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTextMinTemp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberSigned|numberDecimal"
                android:text=" " />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayoutMaxTemp"
            style="@style/Widget.SkyEvent.TextInputLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/spacing_medium"
            android:hint="@string/event_max_temp"
            app:helperText="°C"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/textInputLayoutMinTemp"
            app:layout_constraintTop_toTopOf="@id/textInputLayoutMinTemp"
            app:layout_constraintHorizontal_weight="1">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTextMaxTemp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberSigned|numberDecimal"
                android:text=" " />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayoutWindSpeed"
            style="@style/Widget.SkyEvent.TextInputLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_large"
            android:layout_marginEnd="@dimen/spacing_medium"
            android:hint="@string/event_max_wind"
            app:helperText="м/с"
            app:helperTextTextColor="?attr/colorOnSurface"
            app:layout_constraintEnd_toStartOf="@id/guideline"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textInputLayoutMinTemp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTextWindSpeed"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:text=" " />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/switchNoRain"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/spacing_medium"
            android:checked="true"
            android:text="@string/event_no_rain"
            android:textAppearance="?attr/textAppearanceBody1"
            app:thumbTint="?attr/colorPrimary"
            app:trackTint="?attr/colorPrimaryVariant"
            app:layout_constraintBottom_toBottomOf="@id/textInputLayoutWindSpeed"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/guideline"
            app:layout_constraintTop_toTopOf="@id/textInputLayoutWindSpeed" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonSave"
            style="@style/Widget.SkyEvent.Button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_xxlarge"
            android:layout_marginEnd="@dimen/spacing_medium"
            android:text="@string/save"
            app:layout_constraintEnd_toStartOf="@id/buttonCancel"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textInputLayoutWindSpeed"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0.0"
            app:layout_constraintHorizontal_weight="1" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonCancel"
            style="@style/Widget.SkyEvent.Button.Outlined"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/spacing_medium"
            android:text="@string/cancel"
            app:layout_constraintBottom_toBottomOf="@id/buttonSave"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/buttonSave"
            app:layout_constraintTop_toTopOf="@id/buttonSave"
            app:layout_constraintHorizontal_weight="1" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>